; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/media/omap4iss/extr_iss.c_omap4iss_isp_subclk_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/media/omap4iss/extr_iss.c_omap4iss_isp_subclk_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iss_device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @omap4iss_isp_subclk_enable(%struct.iss_device* %0, i32 %1) #0 {
  %3 = alloca %struct.iss_device*, align 8
  %4 = alloca i32, align 4
  store %struct.iss_device* %0, %struct.iss_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.iss_device*, %struct.iss_device** %3, align 8
  %7 = getelementptr inbounds %struct.iss_device, %struct.iss_device* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = or i32 %8, %5
  store i32 %9, i32* %7, align 4
  %10 = load %struct.iss_device*, %struct.iss_device** %3, align 8
  %11 = call i32 @__iss_isp_subclk_update(%struct.iss_device* %10)
  ret void
}

declare dso_local i32 @__iss_isp_subclk_update(%struct.iss_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
